Updated AllowedHosts in appsettings.json

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LetsGoSEAWebSiteContext": "Server=(localdb)\\mssqllocaldb;Database=LetsGoSEAWebSiteContext-a19d6037-7e20-4a40-8a8e-f0afe3edd637;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
