Move CRUDI files BACK TO /Neighborhoods folder

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -17,4 +17,8 @@
 		<ProjectReference Include="..\src\LetsGoSEA.WebSite.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Pages\CRUDI\" />
+	</ItemGroup>
+
 </Project>
